reduce spacings for mobile, fix game reset bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 header {
   text-align: center;
-  margin: 20px 0 50px;
+  margin: 10px 0 30px;
   font-size: 40px;
 }
